--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+	          <li class="nav-item"><a href="#patent-section" class="nav-link"><span>Patent</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#patent-section" class="nav-link"><span>Patent</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -51,13 +51,13 @@
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-12 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<span class="subheading">Hey! I am</span>
+          		<span class="subheading">Hello! I am</span>
 		  				<h1>Dr. Dhanashree Tharkude</h1>
 			  				<h2>I'm a 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Professor.", "Trainer.", "Consultant." ]'></span>
+								     data-rotate='[ "Professor.", "Corporate Relations Member." ]'></span>
 								</h2>
 							</div>
             </div>
@@ -100,15 +100,40 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="10">0</span>
-	                <span>Research Papers Published</span>
+	                <span class="number">01</span>
+	                <span>Patent Filed</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="#patent-section" class="btn btn-primary py-3 px-3">Know more about Patent</a></p>
               </div>
 	          </div>
 	        </div>
         </div>
     	</div>
+    </section>
+
+    <section class="ftco-section" id="patent-section">
+      <div class="container">
+        <div class="row justify-content-center mb-5 pb-5">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+            <h1 class="big big-2">Patent</h1>
+            <h2 class="mb-4">Patent Information</h2>
+          </div>
+        </div>
+        <div class="row">
+			<div class="col-md-12 text-center d-flex ftco-animate">
+				<a href="#" class="services-1 shadow">
+					<span class="icon">
+						<i class="flaticon-flasks"></i>
+					</span>
+					<div class="desc">
+						<h4><B>METHOD FOR DETERMINING CAREER PLATEAU AND IMPACT THEREOF ON INTENTION TO QUIT</B></h4><h3></h3><br>
+						<p>Reference Number: 201921033429<br><br>
+							Status: Filed<br><br>
+							Date: August 2019</p>
+					</div>
+				</a>
+			</div>
+        </div>
     </section>
 
     <!-- <section class="ftco-section ftco-partner">
@@ -208,12 +233,9 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Courses & Diploma</span>
+		    					<span class="date">Courses</span>
 		    					<h2>Others</h2>
-		    					<ul>
-		    						<li>Participated in Advance Diploma in Software Engineering (ADSE) from Aptech</li>
-		    						<li>Successfully Completed Basic German Course from Symbiosis International University</li>
-		    					</ul>
+		    					Successfully Completed Basic German Course from Symbiosis International University
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -554,30 +576,7 @@
     </section>
 
 
-    <section class="ftco-section" id="patent-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Patent</h1>
-            <h2 class="mb-4">Patent Information</h2>
-          </div>
-        </div>
-        <div class="row">
-			<div class="col-md-12 text-center d-flex ftco-animate">
-				<a href="#" class="services-1 shadow">
-					<span class="icon">
-						<i class="flaticon-flasks"></i>
-					</span>
-					<div class="desc">
-						<h3>Method for determining Career Plateau and Impact thereof on Intention to Quit</h3><br>
-						<p>Reference Number: 201921033429<br><br>
-							Status: Filed<br><br>
-							Date: August 2019</p>
-					</div>
-				</a>
-			</div>
-        </div>
-    </section>
+    
 
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
