--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 <body>
 
 	<!--================ Start Header Area =================-->
-	<header class="header_area">
+	<header class="header_area header_inner_page">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
@@ -110,9 +110,9 @@ She has published more than <b>10 Research Papers and 2 Case Studies</b> in reno
 
 She is active member of HR Federation of India (HRFI), More Than HR (MTHR), and Society of Human Resource Management – India (SHRM) etc. which helps her to connect with industry more frequently.  <br><br>
 
-She is warded as <b>Best Teacher</b> for the Best Services to the Education in 2016 by Lions Club of Pune in Oct 2016.</p></div>
+She is warded as <b>Best Teacher</b> for the Best Services to the Education in 2016 by Lions Club of Pune in Oct 2016.</p>
 <a class="primary_btn" href="#"><span>Resume</span></a>
-</div>
+</div></div>
 		</div>
 	</section>
   <!--================ End About Us Area =================-->
