--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="#about-section">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="#patent-section">Patent</a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Resume</a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Achievements</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Projects</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+							<li class="nav-item active"><a class="nav-link" href="#">Home</a></h4>
+							<li class="nav-item"><a class="nav-link" href="#about-section">About</a></h4>
+							<li class="nav-item"><a class="nav-link" href="#patent-section">Patent</a></h4>
+							<li class="nav-item"><a class="nav-link" href="resume.html">Qualifications</a></h4>
+							<li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></h4>
+							<li class="nav-item"><a class="nav-link" href="services.html">Projects</a></h4>
+							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></h4>
 						</ul>
 					</div>
 				</div>
@@ -111,6 +111,12 @@
 					<div class="statistics_item">
 						<h3><span class="counter">50</span>+</h3>
 						<p>Industry Visits</p>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-3">
+					<div class="statistics_item">
+						<h3><span class="counter">500</span>+</h3>
+						<p>Industry Connects</p>
 					</div>
 				</div>
 			</div>
