--- a/services.html
+++ b/services.html
@@ -39,11 +39,11 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></h4>
-							<li class="nav-item active"><a class="nav-link" href="#">About</a></h4>
+							<li class="nav-item"><a class="nav-link" href="index.html#about-section">About</a></h4>
 							<li class="nav-item"><a class="nav-link" href="index.html#patent-section">Patent</a></h4>
 							<li class="nav-item"><a class="nav-link" href="resume.html">Qualifications</a></h4>
 							<li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></h4>
-							<li class="nav-item"><a class="nav-link" href="services.html">Projects</a></h4>
+							<li class="nav-item active"><a class="nav-link" href="services.html">Projects</a></h4>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></h4>
 						</ul>
 					</div>
@@ -53,76 +53,71 @@
 	</header>
 	<!--================ End Header Area =================-->
 
-  <!--================ Start Banner Area =================-->
-  <section class="banner_area">
-      <div class="banner_inner d-flex align-items-center">
-          <div class="container">
-              <div class="banner_content text-center">
-                  <h2>About Dr. Dhanashree Tharkude</h2>
-                  <div class="page_link">
-                      <a href="index.html">Home</a>
-                      <a href="about.html">About</a>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <!--================ End Banner Area =================-->
+    <!--================ Start Banner Area =================-->
+    <section class="banner_area">
+        <div class="banner_inner d-flex align-items-center">
+            <div class="container">
+                <div class="banner_content text-center">
+                    <h2>Projects</h2>
+                    <div class="page_link">
+                        <a href="index.html">Home</a>
+                        <a href="services.html">Projects</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================ End Banner Area =================-->
 
-
-  <!--================ Start About Us Area =================-->
-	<section class="about_area section_gap">
+	<!--================ Start Features Area =================-->
+	<section class="services_area pb-0 section-margin">
 		<div class="container">
-			<div class="row justify-content-start align-items-center">
-				<div class="col-lg-5">
-					<div class="about_img">
-						<img class="" src="img/about-us.png" alt="">
-					</div>
-				</div>
-
-				<div class="offset-lg-1 col-lg-5">
-					<div class="main_title text-left">
-						<p class="top_text">About<span></span></p>
-						<h2>
-							Professor and <br>
-							Corporate Relations Member
-						</h2>
-						<p>
-							Prof. Dr. Dhanashree Tharkude is PhD in Human Resource Management having more than <b>20 years of experience</b> in an academic and industry.<br><br>
-
-At MIT World Peace University Faculty of Management (PG), currently she is working as Assistant Professor for HR Domain, Class In-charge CSR Year I and Corporate Relations member.<br><br>
-						</p>
-						
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<p class="top_text">Projects <span></span></p>
+						<h2>Projects of <br>
+							Dr. Dhanashree Tharkude </h2>
 					</div>
 				</div>
 			</div>
 
-<div class="row justify-content-start align-items-center"><div class="col-lg-11"><p>
+			<div class="row">
+				<div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+					<div class="service_item">
+						<img src="img/services/s2.png" alt="">
+						<h4>A Study of Factors Causing Employee Career Stagnancy</h4>
+						<p>Vinsys IT Services, Pune<br>
+								Duration: 1 month (Year 2015)<br><hr></p>
+								<p>The project aimed at finding out the Factors responsible for Employee stagnation.<hr></p>
+					</div>
+				</div>
 
-	Along with teaching and corporate relations activity, her current role includes closely working with Program Heads, Academic Head and Head of School in the area of course design and student development. She is actively involved in Academic Programming & Planning, Policies & Procedures Development, and Designing Syllabus Framework. <br><br>
+				<div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+					<div class="service_item">
+						<img src="img/services/s2.png" alt="">
+						<h4>A Study of Higher Education Policy of various companies</h4>
+						<p>Cummins India Ltd., Pune<br>
+								Duration: 1 ½ months (Year 2014)<br><hr></p><p>
+								This project aimed to design Higher Education Policy for Cummins India Limited.<hr></p>
+					</div>
+				</div>
 
-Her hobby is connecting with different people. Exclusive people skills and PR skills makes her different in her work approach.<br><br>
-
-			She has a passion to work at various levels helping institute to reach at desired heights. To achieve this passion her few of the successful assignments at MITWPU includes establishing active Industry Advisory Board having more than <b>50 National & International industry stalwarts, tie up with more than 15 national, multinational industries</b> etc.<br><br>
-
-
-She was associated with Aptech Ltd.(5 yrs). There she worked in HR-Admin function and latter entered into Corporate IT Training. As a trainer, she worked for National Defence Academy, AXA-Abs, Daimler Chrysler, IBM, TCS, Airtel, KPIT Cummins through Aptech Ltd.<br><Br>
-
-Her experience in Academic, Research, Training and Consultancy contributes more to bring the application oriented approach to study and resolve the real life situation. She is motivated to work more in the areas of Business Models, Processes, Behavioural Studies, and Collaborations etc. She prefers to choose unique industry based research problems for research work. <br><br>
-
-Recently she has <b>filed a Patent</b> in the area of Human Resource Management.<br><br>
-
-She has published more than <b>10 Research Papers and 2 Case Studies</b> in renowned National & International journals. She has successfully completed research projects with Cummins India Ltd. And Vinsys IT Services.<br><br>
-
-She is active member of HR Federation of India (HRFI), More Than HR (MTHR), and Society of Human Resource Management – India (SHRM) etc. which helps her to connect with industry more frequently.  <br><br>
-
-She is awarded as <b>Best Teacher</b> for the Best Services to the Education in 2016 by Lions Club of Pune in Oct 2016.</p>
-<a class="primary_btn" href="#"><span>Resume</span></a>
-</div></div>
+				<div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+					<div class="service_item">
+						<img src="img/services/s2.png" alt="">
+						<h4>Measuring Employee Satisfaction</h4>
+						<p>Vinsys IT Services, Pune<br>
+								Duration: 2 ½ months (Year 2008)<br><hr></p><p>
+								The project involved measuring the satisfaction level of employees.<hr></p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
-  <!--================ End About Us Area =================-->
+  <!--================ End Features Area =================-->
   
+
 <!--================ Start Testimonial Area =================-->
 	<section class="testimonial_area">
 		<div class="container">
@@ -196,13 +191,13 @@ She is awarded as <b>Best Teacher</b> for the Best Services to the Education in 
 								<nav class="navbar navbar-expand-lg navbar-light justify-content-center">
 									<div class="collapse navbar-collapse offset">
 										<ul class="nav navbar-nav menu_nav mx-auto">
-											<li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Patent</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="blog.html">Resume</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Achievements</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Projects</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Contact</a></li>
+											<li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Patent</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="blog.html">Resume</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="services.html">Achievements</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="services.html">Projects</a></h4>
+											<li class="nav-item"><a class="nav-link text-white" href="services.html">Contact</a></h4>
 										</ul>
 									</div>
 								</nav>
